RESOLVED FIXED51992
[Qt] [WK2] QtWebKit does not build in debug, FileReader.cpp does not compile
https://bugs.webkit.org/show_bug.cgi?id=51992
Summary [Qt] [WK2] QtWebKit does not build in debug, FileReader.cpp does not compile
Benjamin Poulain
Reported 2011-01-06 08:32:42 PST
QtWebKit does not build in debug, FileReader.cpp does not compile
Attachments
Patch (1.06 KB, patch)
2011-01-06 08:44 PST, Benjamin Poulain
no flags
Benjamin Poulain
Comment 1 2011-01-06 08:44:17 PST
Andreas Kling
Comment 2 2011-01-06 09:32:03 PST
Comment on attachment 78122 [details] Patch LGTM. Another one for the "CString.h was missing again" bucket.
WebKit Commit Bot
Comment 3 2011-01-06 09:35:59 PST
Comment on attachment 78122 [details] Patch Rejecting attachment 78122 [details] from commit-queue. Failed to run "['./Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=cr-jail-4', 'apply-attachment', '--no-update', '--non-interactive', 78122]" exit_code: 1 Last 500 characters of output: sions/2.6/lib/python2.6/urllib2.py", line 361, in _call_chain result = func(*args) File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/thirdparty/autoinstalled/mechanize/_http.py", line 756, in https_open return self.do_open(conn_factory, req) File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/thirdparty/autoinstalled/mechanize/_http.py", line 706, in do_open raise URLError(err) urllib2.URLError: <urlopen error [Errno 8] nodename nor servname provided, or not known> Full output: http://queues.webkit.org/results/7282433
Benjamin Poulain
Comment 4 2011-01-07 03:07:19 PST
Comment on attachment 78122 [details] Patch The commit queue was sick yesterday ;)
WebKit Commit Bot
Comment 5 2011-01-07 03:26:56 PST
Comment on attachment 78122 [details] Patch Clearing flags on attachment: 78122 Committed r75238: <http://trac.webkit.org/changeset/75238>
WebKit Commit Bot
Comment 6 2011-01-07 03:27:02 PST
All reviewed patches have been landed. Closing bug.
Eric Seidel (no email)
Comment 7 2011-01-07 09:31:53 PST
Odd. I guess the cr-jail lost network connectivity or something.
Note You need to log in before you can comment on or make changes to this bug.