2011-01-07  Benjamin Poulain  <benjamin.poulain@nokia.com>

Reviewed by Andreas Kling.

        [Qt] [WK2] QtWebKit does not build in debug, FileReader.cpp does not compile
        https://bugs.webkit.org/show_bug.cgi?id=51992

        Add the missing header. CString is used in debug by the calls to LOG().

        * fileapi/FileReader.cpp:

Canonical link: https://commits.webkit.org/65559@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@75238 268f45cc-cd09-0410-ab3c-d52691b4dbfc